--- a/main.html
+++ b/main.html
@@ -10,7 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<div>
 		
-		<href="https://www.youtube.com/watch?v=MJyKN-8UncM" >My current favourite song shayad</href>
+		<a href="https://www.youtube.com/watch?v=MJyKN-8UncM" >My current favourite song shayad</a>
 	</div>
     <script type="text/javascript" src="./script.js">
 </script>
